--- a/src/app/components/home/home.scss
+++ b/src/app/components/home/home.scss
@@ -27,6 +27,10 @@
 		font-size: 1.3em;
 		font-weight: 700;
 	}
+
+	p {
+		margin: 0;
+	}
 }
 
 .home-start {
